--- a/.github/workflows/ext-swoole-postgresql.yml
+++ b/.github/workflows/ext-swoole-postgresql.yml
@@ -7,6 +7,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
+    - name: install-swoole
+      run: pecl install swoole
     - name: phpize
       run: phpize
     - name: build
