--- a/.github/workflows/ext-swoole_postgresql.yml
+++ b/.github/workflows/ext-swoole_postgresql.yml
@@ -8,7 +8,11 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: install-swoole
-      run: sudo apt install -y php-dev php-pear php-pecl-http php-pecl-http-dev && pecl install swoole
+      run: wget https://github.com/swoole/swoole-src/archive/master.zip &&
+        tar xvf master.zip &&
+        cd swoole-src-master &&
+        phpize &&
+        make -j 8 install
     - name: phpize
       run: phpize
     - name: build
