--- a/.github/workflows/ext-swoole_postgresql.yml
+++ b/.github/workflows/ext-swoole_postgresql.yml
@@ -7,9 +7,8 @@ jobs:
     runs-on: ubuntu-16.04
     steps:
     - uses: actions/checkout@v1
-    - name: install-swoole
-      run: cd /tmp &&
-        wget https://github.com/swoole/swoole-src/archive/master.zip &&
+    - name: install swoole
+      run: wget https://github.com/swoole/swoole-src/archive/master.zip &&
         unzip master.zip &&
         cd swoole-src-master &&
         phpize && ./configure &&
@@ -18,11 +17,15 @@ jobs:
         php -v &&
         sudo sh -c "echo 'extension=swoole.so' >> /etc/php/7.4/cli/conf.d/30-swoole.ini" &&
         php -m &&
-        cd -
+        cd - &&
+        rm -rf swoole-src-master &&
+        pwd
     - name: phpize
       run: phpize
     - name: build
       run: ./configure && make clean && make -j$(sysctl -n hw.ncpu)
+    - name: install postgresql
+      run: sudo apt install -y postgresql
     - name: composer
       run: composer update
     - name: tests
