--- a/.github/workflows/ext-swoole_postgresql.yml
+++ b/.github/workflows/ext-swoole_postgresql.yml
@@ -12,7 +12,8 @@ jobs:
         unzip master.zip &&
         cd swoole-src-master &&
         phpize && ./configure &&
-        sudo make -j$(sysctl -n hw.ncpu) install &&
+        make -j$(sysctl -n hw.ncpu) &&
+        sudo make install &&
         php --ini &&
         php -v &&
         sudo sh -c "echo 'extension=swoole.so' >> /etc/php/7.4/cli/conf.d/30-swoole.ini" &&
