--- a/.github/workflows/ext-swoole_postgresql.yml
+++ b/.github/workflows/ext-swoole_postgresql.yml
@@ -38,6 +38,7 @@ jobs:
         make -j$(sysctl -n hw.ncpu)
     - name: install swoole_postgresql
       run: sudo make install &&
+        sudo rm /etc/php/7.4/cli/conf.d/20-xdebug.ini &&
         sudo sh -c "echo 'extension=swoole_postgresql.so' >> /etc/php/7.4/cli/conf.d/30-swoole_postgresql.ini"
     - name: composer
       run: composer update
