--- a/.github/workflows/ext-swoole_postgresql.yml
+++ b/.github/workflows/ext-swoole_postgresql.yml
@@ -26,8 +26,11 @@ jobs:
         make clean &&
         make -j$(sysctl -n hw.ncpu)
     - name: install swoole_postgresql
-      run: sudo make install &&
+      run: echo "make install" &&
+        sudo make install &&
+        echo "rm xdebug extension from php.ini" &&
         sudo rm /etc/php/7.4/cli/conf.d/20-xdebug.ini &&
+        echo "add swoole_postgresql extension from php.ini" &&
         sudo sh -c "echo 'extension=swoole_postgresql.so' >> /etc/php/7.4/cli/conf.d/30-swoole_postgresql.ini"
     - name: composer
       run: composer update
