--- a/.github/workflows/ext-swoole_postgresql.yml
+++ b/.github/workflows/ext-swoole_postgresql.yml
@@ -21,16 +21,18 @@ jobs:
         pwd
     - name: phpize
       run: phpize
-    - name: build & install
+    - name: build
       run: ./configure &&
         make clean &&
-        make -j$(sysctl -n hw.ncpu) &&
+        make -j$(sysctl -n hw.ncpu)
+    - name: install
+      run:
         echo "make install" &&
         sudo make install &&
         echo "rm xdebug extension from php.ini" &&
         sudo rm /etc/php/7.4/cli/conf.d/20-xdebug.ini &&
         echo "add swoole_postgresql extension from php.ini" &&
-        sudo sh -c "echo 'extension=swoole_postgresql.so' >> /etc/php/7.4/cli/conf.d/30-swoole_postgresql.ini"
+        sudo echo 'extension=swoole_postgresql.so' >> /etc/php/7.4/cli/conf.d/30-swoole_postgresql.ini
     - name: composer
       run: composer update
     - name: tests
