--- a/.github/workflows/ext-swoole_postgresql.yml
+++ b/.github/workflows/ext-swoole_postgresql.yml
@@ -25,6 +25,7 @@ jobs:
         make install
         docker-php-ext-enable swoole_postgresql
         php --ri swoole_postgresql
+        php --ri swoole
     - name: composer
       run: composer update
     - name: tests
